--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 아메리카노 보안
+title: 보안 위키 (Americano Plz!)
 description: Security Research Blog
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amer1can0.github.io" # the base hostname & protocol for your site, e.g. http://example.com
